<resources>
    <string name="app_name" translatable="false">SecuFoam</string>
    <string name="title_home">Home</string>
    <string name="title_upcomingFixtures">Upcoming Fixtures</string>
    <string name="title_newsMaps">News Map</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nconnect with the world of Football</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="username">Username</string>
    <string name="sign_up">Create an account</string>
    <string name="login_failure_doesnt_exist">We can\'t find an account with this email. Try signing up for an account!</string>
    <string name="login_failure_wrong_credentials">Please check your username &amp; password and try again!</string>
    <string name="login_failure_generic">Failed to login: %1$s</string>
    <string name="signup_failure_weak_password">Your password does not meet minimum requirements! Must be at least 6 characters long.</string>
    <string name="signup_failure_already_exists">An account already exists for this email!</string>
    <string name="signup_failure_invalid_format">You must supply a valid formatted email!</string>
    <string name="signup_failure_generic">Failed to register: %1$s</string>
    <string name="totalNumberOfActivations" translatable="false">Total Number Of Activations</string>
    <string name="activation" translatable="false">Activation</string>
    <string name="searchHint">Search</string>
    <string name="searchHome">Search</string>
    <string name="newsByLocationHome">COVID-19 News By Location</string>
    <string name="viewMapButtonHome">View Map</string>
    <string name="standings">Standings</string>
    <string name="averageTemperature" translatable="false">Average Temperature</string>
    <string name="temperature" translatable="false">Temperature</string>
    <string name="sourceLocation" translatable="false">Location</string>
    <string name="secuFoam" translatable="false">SecuFoam</string>
    <string name="sourceTitle">Source Title</string>
    <string name="top5LeagueCompetition">Top 5 League Competition</string>
    <string name="viewCountryStatistics">VIEW COUNTRY STATS</string>
    <string name="maps_titleMapResultsScreen">Local News</string>
    <string name="standingApi">wleHC9avXM3kZYEj</string>
    <string name="institutionApi">wleHC9avXM3kZYEj</string>
    <string name="news_api_key">c2fcdaba168f4ced9261152d382caa92</string>
    <string name="fixtureApiKey">wleHC9avXM3kZYEj</string>
    <string name="fixtureSecreteKey">se5PKlRYCuHAbQ7IclpOvAktmnNmmrGP</string>
    <string name="viewTotalActivations" translatable="false">View Total Activations</string>
    <string name="fixtures">Fixtures</string>
    <string name="viewCountryStats">View Country Stats</string>
    <string name="countryStats">UEFA Country Stats</string>
    <string name="topHeadline">Top Headline</string>
    <string name="topHeadlinesHome">Top Headlines</string>
    <string name="UEFALast5YearsStats">UEFA Stats - The past 5 years </string>
    <string name="viewTopHeadlines">View Top Headline</string>
    <string name="institutions">Institutions</string>
    <string name="selectInstitution">Please select your institution</string>
    <string name="halls">Halls</string>
</resources>
