<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.secufoam.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_fixtures"
        android:name="com.example.secufoam.ui.fixtures.FixtureFragment"
        android:label="@string/title_upcomingFixtures"
        tools:layout="@layout/fragment_fixtures" />

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.example.secufoam.ui.newsMaps.MapsNewsFragment"
        android:label="@string/title_newsMaps"
        tools:layout="@layout/test_layout" />
</navigation>